# MovieReservationSystem

./: .gitignore  pyproject.toml  test.py
app/: main.py
app/core/: __init__.py  config.py  security.py
app/database/: database.py
app/models/: __init__.py  auth.py  user.py
app/routes/: __init__.py  auth.py  user.py
app/services/: auth.py  user.py
app/utils/: exceptions.py
backend/: .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a9bebf5f7f51_initial_migration.py
backend/app/: main.py
backend/app/core/: rbac.py
backend/app/database/: __init__.py  database.py
backend/app/models/: __init__.py  database.py  genre.py  movie.py  reservation.py  theatre.py  user.py
backend/app/routes/: __init__.py  auth.py  genre.py  movie.py  theatre.py  user.py
backend/app/services/: __init__.py  genre.py  movie.py  theatre.py  user.py
backend/app/utils/: exceptions.py  helpers.py
